--- a/content/dergi/sayi-0/sayi-0-ekoloji.html
+++ b/content/dergi/sayi-0/sayi-0-ekoloji.html
@@ -16,7 +16,7 @@ tags= [
 +++
 
 <div class="text-center">
-	<img loading="lazy" class="img-fluid" src="/img/peel-saver-packaging.jpg" alt="" />
+	<img loading="lazy" class="img-fluid slb" src="/img/peel-saver-packaging.jpg" alt="" />
 </div>
 <div class="container">
 	<h2>Ekoloji nedir, neden önemlidir?</h2>
@@ -52,7 +52,7 @@ tags= [
 	</div>
 	<h2>Ekoloji, sürdürülebilirlik ve tasarımcı ilişkisi</h2>
 	<div class="row">
-		<div class="col-md-5"><img loading="lazy" class="img-fluid" src="/img/zero-waste.jpg" alt="" /></div>
+		<div class="col-md-5"><img loading="lazy" class="img-fluid slb" src="/img/zero-waste.jpg" alt="" /></div>
 		<div class="col-md-7">
 			Sürdürülebilirlik, insanlığın ve gelecek nesillerin gereksinimlerini de göz önünde bulundurarak, geleceği
 			tehlikeye atmadan ihtiyaçların karşılanabilmesidir. Ekoloji ve sürdürülebilirlik birbirleriyle son derece bağlı
@@ -99,14 +99,14 @@ tags= [
 		<div class="col-md-7">
 			<br />
 			<br />
-			<img loading="lazy" class="img-fluid" src="/img/wwf-bambu.jpg" alt="" />
+			<img loading="lazy" class="img-fluid slb" src="/img/wwf-bambu.jpg" alt="" />
 		</div>
 	</div>
 
 	Bazı somut örneklerle pekiştirelim
 	<div class="row">
 		<div class="col-md-5">
-			<img loading="lazy" class="img-fluid" src="/img/wwf-for-a-living-planet.jpg" alt="" />
+			<img loading="lazy" class="img-fluid slb" src="/img/wwf-for-a-living-planet.jpg" alt="" />
 		</div>
 		<div class="col-md-7">
 			Royal Collage of Art’tan mezun Ariane Prin kalem fabrikası için hammadde olarak Royal Collage of Art’taki
@@ -166,6 +166,6 @@ tags= [
 			tasarım ve planlama yaklaşımları kapsamında değerlendirildikleri koşulda, sürdürülebilirlikleri de sağlanmış
 			olacaktır.
 		</div>
-		<div class="col-md-2"><img loading="lazy" class="img-fluid" src="/img/ecological-design-build.jpg" alt="" /></div>
+		<div class="col-md-2"><img loading="lazy" class="img-fluid slb" src="/img/ecological-design-build.jpg" alt="" /></div>
 	</div>
 </div>
