--- a/content/dergi/sayi-0/sayi-0-markutworks.html
+++ b/content/dergi/sayi-0/sayi-0-markutworks.html
@@ -16,6 +16,6 @@ tags= [
 
 <div class="container text-center">
 <h2>Instagram'da #MarkutWorks'ü hashtagle yeni sayıda yerini al</h2>
-<img loading="lazy" class="img-fluid" src="/img/markutworks-dream.png" alt=""><br>
+<img loading="lazy" class="img-fluid slb" src="/img/markutworks-dream.png" alt=""><br>
 <small>İllustrasyon: Deniz Çam</small>
 </div>
