--- a/content/dergi/sayi-1/sayi-1-ikonik-kahve-makineleri.html
+++ b/content/dergi/sayi-1/sayi-1-ikonik-kahve-makineleri.html
@@ -22,10 +22,10 @@ sayfa: "02"
 type: sayfa
 ---
 
-<div class="text-center"><img loading="lazy" class="img-fluid" src="/img/coffee-thumbnail.jpg" alt=""></div>
+<div class="text-center"><img loading="lazy" class="slb" class="img-fluid" src="/img/coffee-thumbnail.jpg" alt=""></div>
 <div class="container">
     <div class="row mt-5">
-        <div class="col-md-4"><img loading="lazy" class="img-fluid" src="/img/Braun-1972-KF-20.jpg" alt=""></div>
+        <div class="col-md-4"><img loading="lazy" class="slb" class="img-fluid" src="/img/Braun-1972-KF-20.jpg" alt=""></div>
         <div class="col-md-8">
             <p>Kahvelerinizi hazırlayın ve okumaya başlayın…</p>
             <h3>Braun KF 20 Aromaster</h3>
@@ -44,12 +44,12 @@ type: sayfa
     </div>
     <div class="row">
         <div class="col-md-6 offset-md-3"><br><br>
-            <img loading="lazy" class="img-fluid" src="/img/kf-20.gif" alt="">
+            <img loading="lazy" class="slb" class="img-fluid" src="/img/kf-20.gif" alt="">
         </div>
     </div>
     <hr>
     <div class="row">
-        <div class="col-md-5"><br><br><img loading="lazy" class="img-fluid" src="/img/frenchpressc.jpg" alt=""><small>İllustrasyon:
+        <div class="col-md-5"><br><br><img loading="lazy" class="slb" class="img-fluid" src="/img/frenchpressc.jpg" alt=""><small>İllustrasyon:
                 Elif Ersöz</small></div>
         <div class="col-md-7">
             <h3 class="display-5">Chambord Coffee Maker</h3>
@@ -68,11 +68,11 @@ type: sayfa
         </div>
     </div>
     <div class="row">
-        <div class="col-md-5"><img loading="lazy" class="img-fluid" src="/img/chambord-coffee-white.jpg" alt=""></div>
+        <div class="col-md-5"><img loading="lazy" class="slb" class="img-fluid" src="/img/chambord-coffee-white.jpg" alt=""></div>
         <div class="col-md-7">
             <p>Bugün bildiğimiz kahve makinesinin ilk patenti İtalyanlardan gelmesine rağmen bu kahve makinesine Fransız
                 versiyonu ile hitap etmeyi seçtik.</p>
-            <img loading="lazy" class="img-fluid" src="/img/Chambord-Coffee-Maker.jpg" alt="">
+            <img loading="lazy" class="slb" class="img-fluid" src="/img/Chambord-Coffee-Maker.jpg" alt="">
             <p>Bu makine, üretildiği Fransa'da 'Chambord' olarak biliniyordu. Danimarkalı şirket Bodum, Chambord’un
                 adının ve fabrikasının haklarını satın aldı. </p>
             <p>1944 yılında Peter Bodum tarafından kurulan Bodum, sofra ve mutfak gereçleri şirketidir. En ikonik
@@ -83,7 +83,7 @@ type: sayfa
                 mükemmel bir fincan kahve verir. Afiyet olsun 😄</p>
         </div>
     </div>
-    <img loading="lazy" class="img-fluid" src="/img/Chambord Coffee Maker.jpg" alt="">
+    <img loading="lazy" class="slb" class="img-fluid" src="/img/Chambord Coffee Maker.jpg" alt="">
     <hr>
     <div class="row">
         <div class="col-md-8">
@@ -100,13 +100,13 @@ type: sayfa
                 etkiliydi ki, zamanla eskizleri ve çizimleri kendi içlerinde eser olarak kabul edildi ve dünya çapında
                 büyük müzelerde gösterildi.</p>
         </div>
-        <div class="col-md-4"><br><br><br><img loading="lazy" class="img-fluid" src="/img/la cupola.jpg" alt=""></div>
-        <div class="col-md-4"><img loading="lazy" class="img-fluid" src="/img/La cupola-2.jpg" alt=""></div>
-        <div class="col-md-8"><img loading="lazy" class="img-fluid" src="/img/Novara-402-Zoom.jpg" alt=""></div>
+        <div class="col-md-4"><br><br><br><img loading="lazy" class="slb" class="img-fluid" src="/img/la cupola.jpg" alt=""></div>
+        <div class="col-md-4"><img loading="lazy" class="slb" class="img-fluid" src="/img/La cupola-2.jpg" alt=""></div>
+        <div class="col-md-8"><img loading="lazy" class="slb" class="img-fluid" src="/img/Novara-402-Zoom.jpg" alt=""></div>
     </div>
     <hr>
     <div class="row">
-        <div class="col-md-7"><img loading="lazy" class="img-fluid" src="/img/bialetti_moka_pot.jpg" alt=""></div>
+        <div class="col-md-7"><img loading="lazy" class="slb" class="img-fluid" src="/img/bialetti_moka_pot.jpg" alt=""></div>
         <div class="col-md-5">
             <h3>Moka Bialetti</h3>
             <p>Adını Yemen kenti Mocha’dan alır. 1933 yılında İtalyan mühendis Alfonso Bialetti tarafından icat edildi
@@ -123,16 +123,16 @@ type: sayfa
         </div>
     </div>
     <div class="row mt-5">
-        <div class="offset-md-3 col-md-3 col-6 "><img loading="lazy" class="img-fluid" src="/img/Moka_Animation.gif"
+        <div class="offset-md-3 col-md-3 col-6 "><img loading="lazy" class="slb" class="img-fluid" src="/img/Moka_Animation.gif"
                 alt="Moka Pot Çalışma Prensibi">
         </div>
-        <div class="col-md-3 col-6"><img loading="lazy" class="img-fluid" src="/img/moka-pot.jpg" alt="">
+        <div class="col-md-3 col-6"><img loading="lazy" class="slb" class="img-fluid" src="/img/moka-pot.jpg" alt="">
         <br><small>Alt bölme (A) su içerir. Isıtıldığında, buhar basıncı, suyu öğütülmüş kahve (B) içeren bir sepetten
                 toplama odasına (C) iter.
                 <br><br> </small></div>
     </div>
 </div>
-<div class="text-center"><img loading="lazy" class="img-fluid" src="/img/mochapot.jpg" alt=""></div><br><small>İllustrasyon: Elif
+<div class="text-center"><img loading="lazy" class="slb" class="img-fluid" src="/img/mochapot.jpg" alt=""></div><br><small>İllustrasyon: Elif
     Ersöz</small>
 <div class="container kaynak">
     <p><br><br><br><b>Kaynaklar</b>
