--- a/content/dergi/sayi-1/sayi-1-otomobillerin-hayatımızdaki-yeri.html
+++ b/content/dergi/sayi-1/sayi-1-otomobillerin-hayatımızdaki-yeri.html
@@ -22,7 +22,7 @@ tags= ["dergi"]
         <div class="col-md-7"><p>Her şey 1885’te Carl Benz’in ilk içten yanmalı aracın patentini alması ile başladı. Aradan geçen 135 yılda ise otomotiv endüstrisinin geldiği nokta çok şaşırtıcı. Otomatikleşen vites kutuları, elektrik ve fosil yakıtı beraber kullanan hibrit güç üniteleri, kendi kendine park eden ve kendini şerit içerisinde tutan otomobiller ve hatta 5. seviye otonom sürüş! 1885 yılında üretim amacı “güç ve zamandan kazanarak a noktasından b noktasına gitmek” olan otomobillerin bugün insanlara tam olarak bunun için hizmet ediyor sayılmaz. </p>
         </div>
     </div>
-<img loading="lazy" class="img-fluid" src="/img/T50F12.jpg" alt="">
+<img loading="lazy" class="slb" class="img-fluid" src="/img/T50F12.jpg" alt="">
 <small>Gordon Murray T50 / McLarenF1</small>
 <div class="row">
         <div class="col-md-4"><p>Bunun en iyi örneğini geçtiğimiz ay 90lara damgasını vuran McLaren F1’in tasarımcı Gordon Murray’in kendi şahsi markası adı altında duyurduğu T50 modeli ile gördük. T50 bir spor otomobil. Aslında bir süper spor. Ancak ne turbo şarj ne de süper şarj beslemeli bir motora sahip (turbo şarj ve süper şarj verimliliği artıran motor elemanlarıdır). Yani Murray’in amacı güç ve zamandan kazanç değil. Sizce Murray ünlü Cosworth (bir motor üreticisi) yapımı 3.9 litre hacminde v şeklinde sıralanmış 12 adet silindire sahip atmosferik ve dakikada 12100 devir çevirebilen 654 beygir ve 427 newton metre güç üretebilen bir motor ile neyi amaçlıyor? </p>
