--- a/content/dergi/sayi-2/sayi-2-tipografi-tasarim-sozlugu.html
+++ b/content/dergi/sayi-2/sayi-2-tipografi-tasarim-sozlugu.html
@@ -51,14 +51,14 @@ tags= [
   </p>
   <div class="row">
     <div class="col-md-6">
-      <img loading="lazy" src="/img/product-packaging.jpg" alt="Ürün Paket Ambalaj Tasarımı" />
+      <img loading="lazy" class="slb" src="/img/product-packaging.jpg" alt="Ürün Paket Ambalaj Tasarımı" />
       <br /><br />
-      <img loading="lazy" src="/img/dergi-icerik.jpg" alt="Dergi İç Sayfa Tasarımı" />
+      <img loading="lazy" class="slb" src="/img/dergi-icerik.jpg" alt="Dergi İç Sayfa Tasarımı" />
     </div>
     <div class="col-md-6">
-      <img loading="lazy" src="/img/rebelle-beauty.jpg" alt="Tabela Tipografi Tasarımı" />
+      <img loading="lazy" class="slb" src="/img/rebelle-beauty.jpg" alt="Tabela Tipografi Tasarımı" />
       <br /><br />
-      <img loading="lazy" src="/img/mobile-ui-ux.jpg" alt="Mobil Uygulama Ui Ux Tasarımı" />
+      <img loading="lazy" class="slb" src="/img/mobile-ui-ux.jpg" alt="Mobil Uygulama Ui Ux Tasarımı" />
     </div>
   </div>
   <div class="row mb-5 mt-5">
@@ -78,9 +78,9 @@ tags= [
       </p>
     </div>
     <div class="col-md-6">
-      <img loading="lazy" src="/img/el-yazisi-tabela.jpg" alt="El Yazısı Şehir Tabelası" />
+      <img loading="lazy" class="slb" src="/img/el-yazisi-tabela.jpg" alt="El Yazısı Şehir Tabelası" />
       <br /><br />
-      <img loading="lazy" src="/img/sans-serif-tabela.jpg" alt="Sans Serif Şehir Tabelası" />
+      <img loading="lazy" class="slb" src="/img/sans-serif-tabela.jpg" alt="Sans Serif Şehir Tabelası" />
     </div>
   </div>
   <p>
@@ -99,7 +99,7 @@ tags= [
 
   <div class="row">
     <div class="col-md-6">
-      <img loading="lazy" src="/img/serif-font.jpg" alt="Serif Font Nedir?" />
+      <img loading="lazy" class="slb" src="/img/serif-font.jpg" alt="Serif Font Nedir?" />
       <p>
         <strong>Serif</strong> yazı türlerinde harf uzatma çizgileri, uzatılmış
         fırça darbeleri ile sağlanmıştır. Yani bir nevi tırnakları bulunur. Bu
@@ -108,7 +108,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-6">
-      <img loading="lazy" src="/img/sans-serif-font.jpg" alt="Sans Serif Font Nedir?" />
+      <img loading="lazy" class="slb" src="/img/sans-serif-font.jpg" alt="Sans Serif Font Nedir?" />
       <p>
         <strong>Sans serif</strong> yani Serifi olmayan, anlamına gelir. Sans
         Serifte harf uzantıları (tırnaklar) bulunmaz. Düz ve net bir yapısı
@@ -133,7 +133,7 @@ tags= [
         ve dikkat çekici şekilde verilir ve giderek küçük yazıya doğru
         yönlendirilir.
       </p>
-      <img loading="lazy" src="/img/kartvizit-myriad-pro.jpg" alt="Kart" />
+      <img loading="lazy" class="slb" src="/img/kartvizit-myriad-pro.jpg" alt="Kart" />
     </div>
     <div class="col-md-6">
       <p>
@@ -141,7 +141,7 @@ tags= [
         boşluktur. Çok az ya da çok fazla ölçüde olan satır aralıkları okuyucu
         için oldukça zorlayıcıdır. İdeali her zaman akıcılığı sağlar.
       </p>
-      <img loading="lazy"
+      <img loading="lazy" class="slb"
         src="/img/kitap-satir-araligi.jpg"
         alt="Kitap Satır Aralığı (Leading)"
       />
@@ -155,7 +155,7 @@ tags= [
         aralığını daha dar ya da daha geniş kullanabiliriz.
       </p>
       <br />
-      <img loading="lazy"
+      <img loading="lazy" class="slb"
         src="/img/tracking-harf-araligi.jpg"
         alt="Tracking, Harf Aralığı Nedir?"
       />
@@ -167,7 +167,7 @@ tags= [
         daha doğru vurgulamak için ve toplamında düzgün bir görünüm sağlaması
         içindir.
       </p>
-      <img loading="lazy" src="/img/kerning-aralik.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/kerning-aralik.jpg" alt="" />
     </div>
   </div>
   <br />
