--- a/content/dergi/sayi-3/sayi-3-3byazici.html
+++ b/content/dergi/sayi-3/sayi-3-3byazici.html
@@ -51,7 +51,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-4">
-      <img loading="lazy" src="/img/MakerBot_ThingOMatic_Bre_Pettis.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/MakerBot_ThingOMatic_Bre_Pettis.jpg" alt="" />
     </div>
   </div>
 
@@ -72,16 +72,16 @@ tags= [
             <strong>Chuck Hull</strong> tarafından piyasaya sürüldü ve
             &quot;stereolitografi&quot; (SLA) sürecini kullanıyordu.
           </p>
-          <img loading="lazy" src="/img/chuck-hall-tease-story-body.jpg" alt="" />
+          <img loading="lazy" class="slb" src="/img/chuck-hall-tease-story-body.jpg" alt="" />
         </li>
       </div>
       <div class="col md-4">
         <br />
-        <img loading="lazy" src="/img/sla1g.jpg" alt="" />
+        <img loading="lazy" class="slb" src="/img/sla1g.jpg" alt="" />
       </div>
       <div class="col md-4">
         <br />
-        <img loading="lazy" src="/img/3boyutlubaski-makinesi-ilk.jpg" alt="" />
+        <img loading="lazy" class="slb" src="/img/3boyutlubaski-makinesi-ilk.jpg" alt="" />
       </div>
     </div>
     <li>
@@ -180,7 +180,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-4">
-      <img loading="lazy"
+      <img loading="lazy" class="slb"
         src="/img/Above-3D-Printed-parts-made-in-FDM-SLA-SLS-technology.jpg"
         alt=""
       />
@@ -195,7 +195,7 @@ tags= [
         >
         Malzeme, bir nozül veya delikten seçici olarak dağıtılır.
       </p>
-      <div class="col-6"><img loading="lazy" src="/img/ultimaker-s3.jpg" alt="" /></div>
+      <div class="col-6"><img loading="lazy" class="slb" src="/img/ultimaker-s3.jpg" alt="" /></div>
     </div>
     <div class="col-md-6">
       <p>
@@ -203,7 +203,7 @@ tags= [
         Yüksek enerjili bir kaynak, toz parçacıklarını seçici olarak
         birleştirir.
       </p>
-      <img loading="lazy"
+      <img loading="lazy" class="slb"
         src="/img/Above-The-ProX-6100-SLS-3D-Printer-from-3D-Systems.jpg"
         alt=""
       />
@@ -250,14 +250,14 @@ tags= [
   <h6>Yarı Endüstriyel Zanaat: 3B Baskıyla Seramik</h6>
   <div class="row">
     <div class="col-md-4">
-      <img loading="lazy" src="/img/3d-printer-large-lartisanelectronique2.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-printer-large-lartisanelectronique2.jpg" alt="" />
     </div>
     <div class="col-md-4">
-      <img loading="lazy" src="/img/large-unfold_vk_1638-2.jpg" alt="" /><br /><br />
-      <img loading="lazy" src="/img/large-dsc.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/large-unfold_vk_1638-2.jpg" alt="" /><br /><br />
+      <img loading="lazy" class="slb" src="/img/large-dsc.jpg" alt="" />
     </div>
     <div class="col-md-4">
-      <img loading="lazy" src="/img/large-unfold-3d-print.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/large-unfold-3d-print.jpg" alt="" />
     </div>
   </div>
 
@@ -291,7 +291,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-4">
-      <img loading="lazy" src="/img/ISS-3d-printer.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/ISS-3d-printer.jpg" alt="" />
     </div>
   </div>
   <hr />
@@ -314,7 +314,7 @@ tags= [
       <p>Her türlü gıdayı 3B yazıcılarla üretebileceğimiz günler yakındır!</p>
     </div>
     <div class="col-md-6">
-      <br /><br /><img loading="lazy"
+      <br /><br /><img loading="lazy" class="slb"
         src="/img/The_worlds_first_3D-printed_vegan_steak.jpg"
         alt=""
       />
@@ -343,15 +343,15 @@ tags= [
       </p>
     </div>
     <div class="col-md-3">
-      <br /><img loading="lazy"
+      <br /><img loading="lazy" class="slb"
         src="/img/Star_Trek_Replicator_and_3D_printer.png"
         alt=""
       /><br /><br />
-      <img loading="lazy" src="/img/kaptan-picard-tea.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/kaptan-picard-tea.jpg" alt="" />
     </div>
     <div class="col-md-3">
       <br />
-      <img loading="lazy" src="/img/kaptan-picard-tea-earl-grey.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/kaptan-picard-tea-earl-grey.jpg" alt="" />
       <blockquote>
         "Tea, earl grey, hot! (Çay, bergamot, sıcak!)" -Kaptan Picard
       </blockquote>
@@ -382,7 +382,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-6">
-      <img loading="lazy" src="/img/3d-drucker-dorscher-formen.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-drucker-dorscher-formen.jpg" alt="" />
     </div>
   </div>
   <hr />
@@ -399,39 +399,39 @@ tags= [
   <div class="row">
     <div class="col-md-3">
       <p>Kulaklık tutucu:</p>
-      <img loading="lazy" src="/img/3d-print-tuacak.jpg" alt="" />
-      <img loading="lazy" src="/img/3d-print-tutacak-2.jpg" alt="" />
-      <img loading="lazy" src="/img/3d-print-kulaklik-tutacagi.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-tuacak.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-tutacak-2.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-kulaklik-tutacagi.jpg" alt="" />
     </div>
     <div class="col-md-3">
       <p>Süpürge için yeni parça:</p>
-      <img loading="lazy" src="/img/3d-print-supurge-parcasi.jpg" alt="" />
-      <img loading="lazy" src="/img/3d-printer-supurge-parca.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-supurge-parcasi.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-printer-supurge-parca.jpg" alt="" />
       <p>Askı:</p>
-      <img loading="lazy" src="/img/3d-print-askilik.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-askilik.jpg" alt="" />
     </div>
     <div class="col-md-3">
       <p>Paten tutucu:</p>
-      <img loading="lazy" src="/img/3d-print-paten-tutucu.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-paten-tutucu.jpg" alt="" />
       <hr />
       <p>Masa altında modem tutucu:</p>
-      <img loading="lazy" src="/img/3d-print-modem-tutucu.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-modem-tutucu.jpg" alt="" />
       <hr />
       <p>iPod koleksiyonu için düzenleyici:</p>
-      <img loading="lazy" src="/img/3d-print-ipod-duzenleyici.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-ipod-duzenleyici.jpg" alt="" />
     </div>
     <div class="col-md-3">
       <p>Rüzgar türbini:</p>
-      <img loading="lazy" src="/img/3d-printer-ruzgar-turibini.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-printer-ruzgar-turibini.jpg" alt="" />
       <hr />
       <p>Groot saksı:</p>
-      <img loading="lazy" src="/img/3d-print-groot-saksi.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-groot-saksi.jpg" alt="" />
       <hr />
       <small
         >3B baskı (çelik macun, zımpara, boya son aşamalarından geçmiş)
         Mandalorian kaskı:</small
       >
-      <img loading="lazy" src="/img/3d-print-mandalorian.jpg" alt="" />
+      <img loading="lazy" class="slb" src="/img/3d-print-mandalorian.jpg" alt="" />
       <blockquote>Yolumuz budur!</blockquote>
     </div>
   </div>
