--- a/content/dergi/sayi-3/sayi-3-bauhaus-ekolu.html
+++ b/content/dergi/sayi-3/sayi-3-bauhaus-ekolu.html
@@ -18,7 +18,7 @@ tags= [
 +++
 
 <div class="text-center">
-  <img loading="lazy" src="/img/Bauhaus-Costume.jpg" alt="" />
+  <img loading="lazy" class="slb" src="/img/Bauhaus-Costume.jpg" alt="" />
 </div>
 <div class="container">
   <div class="row">
@@ -79,7 +79,7 @@ tags= [
         geçirilen bu tasarımları günlük yaşamda kullanma fırsatını bulmuştur.
       </p>
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/bauhaus-ogretmenleri-dessau.jpg"
           alt=""
@@ -109,7 +109,7 @@ tags= [
         edinmiştir.
       </p>
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/bauhaus-movement-school.jpg"
           alt=""
@@ -177,7 +177,7 @@ tags= [
     </div>
     <div class="col-md-3">
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/joost-schmidt-mechanical-stage design.jpg"
           alt=""
@@ -189,7 +189,7 @@ tags= [
     </div>
     <div class="col-md-3">
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/Bauhausaustellung-1923.jpg"
           alt=""
@@ -226,7 +226,7 @@ tags= [
     </div>
     <div class="col-md-3">
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/walter-gropius.jpg"
           alt=""
@@ -236,7 +236,7 @@ tags= [
     </div>
     <div class="col-md-3">
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/Lyonel-Feininger-Katedral-bauhaus-manifesto-kapak.jpg"
           alt=""
@@ -276,7 +276,7 @@ tags= [
     </div>
     <div class="col-md-6">
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/Gropius_Walter_1922_Schema_zum_Aufbau_der_Lehre_am_Bauhaus.jpg"
           alt=""
