--- a/content/dergi/sayi-4/sayi-4-ergonomi.html
+++ b/content/dergi/sayi-4/sayi-4-ergonomi.html
@@ -23,7 +23,7 @@ tags= [
 <div class="container">
 
 <div class="text-center">
-<img loading="lazy" src="/img/ergonomi-nedir.gif" alt="">
+<img loading="lazy" class="slb" src="/img/ergonomi-nedir.gif" alt="">
 </div>
 <h1>Ergonomi Nedir?</h1>
 <div class="row">
@@ -40,7 +40,7 @@ tags= [
 <div class="row">
     <div class="col-md-6"> <p> Ergonomi insanın var olduğu süreçten bu yana kendi yaşam koşullarını iyileştirmek, geliştirmek ve bir adım öteye taşımak amacıyla aslında hep hayatımızın bir parçası olmuştur. Ancak bilim olarak görülmeye ve üzerinde bilinçli şekilde düşünülüp araştırılmaya başlanması yüzyıllar almıştır. </p>
     </div>
-    <div class="col-md-6"><img loading="lazy" src="/img/ergonomik-evrim.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/ergonomik-evrim.jpg" alt=""></div>
 </div>      
 
 <br><br>
@@ -49,7 +49,7 @@ tags= [
         <li>Ergonomi tarihinde genellikle öncellikle F. W. Taylor’dan söz edilir. Taylor 18. Yüzyılın ikinci yarısında iş düzeni anlayışını geliştirmiş, iş görenlerin daha verimli ve düzenli nasıl çalışabilecekleri üzerine çalışmalar yapmıştır. Sosyal ve psikolojik bilgisinin eksikliğinden dolayı eleştirilmesine rağmen ergonomide “iş hevesi" konusunda araştırma yapan ve öneriler getiren ilk araştırmacı olarak anılır.</li>
         </ul>
         <figure class="figure">
-            <img loading="lazy" class="figure-img img-fluid" src="/img/frederick-taylor.jpg" alt="">
+            <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/frederick-taylor.jpg" alt="">
             <figcaption class="figure-caption">Frederick Winslow Taylor</figcaption>
         </figure>
     </div>
@@ -59,7 +59,7 @@ tags= [
                 </li>
             </ul>
             <figure class="figure">
-                <img loading="lazy" class="figure-img img-fluid" src="/img/frank-lillian-gillbreth.jpg" alt="">
+                <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/frank-lillian-gillbreth.jpg" alt="">
                 <figcaption class="figure-caption">Frank ve Lillian Gilbreth</figcaption>
             </figure>
     </div>
@@ -69,7 +69,7 @@ tags= [
             </li>
             </ul>
             <figure class="figure">
-                <img loading="lazy" class="figure-img img-fluid" src="/img/hugo-munsterberg.jpg" alt="">
+                <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/hugo-munsterberg.jpg" alt="">
                 <figcaption class="figure-caption">Hugo Münsterberg</figcaption>
             </figure>
  
@@ -78,7 +78,7 @@ tags= [
 <br><br><br>
 <div class="row">
     <div class="col-md-5">
-        <img loading="lazy" src="/img/ikinci-dunya-savasi-ergonomik-farkindalik.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/ikinci-dunya-savasi-ergonomik-farkindalik.jpg" alt="">
     </div>
     <div class="col-md-7"><ul>
         <li>İkinci Dünya Savaşı gerçekten de ergonomi bilimi açısından gelişmenin en fazla olduğu yıllar olarak anılır. Yeni harp araçları yapımı için artan mekanizasyon sürecinde makinelerin özellikleri abartılarak  insan-makine sistemleri ihmal edildiğinden ortaya çıkan başarısızlıklar, bu başarısızlıkların nedeni araştırıldığında ergonomi bilimine verilmesi gereken önemi daha iyi ortaya koymuştur.</li>
@@ -89,8 +89,8 @@ tags= [
 <br><br><br>
 <div class="row">
     <div class="col-md-5">
-        <img loading="lazy" src="/img/ikinci-dunya-savasi-ergonomik-problem.jpg" alt=""><br><br>
-        <img loading="lazy" src="/img/ikinci-dunya-savasi-ergonomi.jpg" alt=""><br><br>
+        <img loading="lazy" class="slb" src="/img/ikinci-dunya-savasi-ergonomik-problem.jpg" alt=""><br><br>
+        <img loading="lazy" class="slb" src="/img/ikinci-dunya-savasi-ergonomi.jpg" alt=""><br><br>
     </div>
     <div class="col-md-7">
         <div class="callout p-md-5 p-3" style="background-color: #ad9e9e1f; ">
@@ -121,7 +121,7 @@ tags= [
 <div class="row">
     <div class="col-md-3">
         <figure class="figure">
-            <img loading="lazy" class="figure-img img-fluid" src="/img/alphonse-chapanis.jpg" alt="">
+            <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/alphonse-chapanis.jpg" alt="">
             <figcaption class="figure-caption">Alphonse Chapanis</figcaption>
         </figure>
     </div>
@@ -142,7 +142,7 @@ tags= [
     <div class="col-md-4"><p><strong>Biyomekanik</strong> ise anatomik yapıların, ortamın fiziksel öğeleri ve koşulları ile etkileşimini esas almaktadır. Burada söz konusu olan anatomik yapılardan özellikle kas ve iskelet sitemini meydana getiren kemikler sayılabilir. Kassal iş, fiziksel egzersiz ve kullanan kişi ile kullandığı araç gereç etkileşimi, biyomekaniğin konuları arasındadır. </p>
     </div>
 </div>
-<img loading="lazy" src="/img/ergonomi-anatomi-fizyoloji-psikoloji.jpg" alt="">
+<img loading="lazy" class="slb" src="/img/ergonomi-anatomi-fizyoloji-psikoloji.jpg" alt="">
 <div class="row">
     <div class="col-md-5"><p><strong>Fizyoloji</strong>, yaşam bilimi olarak adlandırabileceğimiz, yaşamsal olayları ve bunların oluşumundaki biyolojik mekanizmalarını inceleyen bilimdir. İki ana dalı iş fizyolojisi ve çevre fizyolojisi özellikle önemlidir. İş-enerji ilişkisini, iş ve egzersiz sırasında enerji sağlanmasıyla ilgili mekanizmaları iş fizyolojisi inceler. Çevre fizyolojisi ise fiziksel öğelerin insan üzerindeki etkilerini konu edinir. Bu fiziksel öğeler arasında aydınlanma, gürültü ve ortam ısısını sayabiliriz.</p>
     </div>
@@ -151,8 +151,8 @@ tags= [
 </div>
 
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/anropometri-ergonomi.jpg" alt=""></div>
-    <div class="col-md-6"><img loading="lazy" src="/img/ergonomik-arastirma.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/anropometri-ergonomi.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/ergonomik-arastirma.jpg" alt=""></div>
 </div>
 
 <blockquote>"Ergonomi (İşbilim) insan, ekipman, çalışma alanı ve çevresi arasındaki ilişkileri inceleyen ve bunlardan doğan sorunlar bütününe anatomi, fizyoloji ve psikoloji bilimlerinin temel bulgularını uygulamaya çalışan bir bilim dalıdır. Antropolojiye gelince, insan ve yapıtlarını inceleyen bir bilim dalı olarak karşımıza çıkan bu konu, hem dilbilimsel, (başka bir deyişle diller arasındaki ilişkileri inceleme açısından), hem de işte çalışırken duruşu, oturma ya da ayakta durma konumlarını en verimli, en etkili ve hepsinden de öte en rahat şekle sokmaya yarayan antropometrik çalışmalar ergonomiyle yakın bir ilişki içerisine girmiştir."- Prof. Dr. Fuat Çelebioğlu</blockquote>
@@ -163,7 +163,7 @@ tags= [
 
 <div class="row">
     <div class="col-md-3"><figure class="figure">
-        <img loading="lazy" class="figure-img img-fluid" src="/img/victor-papanek.jpg" alt="">
+        <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/victor-papanek.jpg" alt="">
         <figcaption class="figure-caption">Victor Papanek</figcaption>
     </figure></div>
     <div class="col-md-9"><blockquote>"Bir tasarımdan söz ettiğimizde bu bir zekanın, olayları ayrı ayrı ve kavramsal modeller arasına yerleştirilmiş olduğunu ifade eder. Kar taneleri tasarımdır, kristaller tasarımdır, müzik tasarımdır ve gökkuşağı renklerinin ancak milyonda birinin elektromanyetik spektrumu bir tasarımdır." -Victor Papanek</blockquote>
@@ -173,17 +173,17 @@ tags= [
 <br><br>
 <div class="row">
     <div class="col-md-4">
-        <img loading="lazy" src="/img/tasarim-sozlugu-ergonomi-nedir.jpg" alt=""><br><br>
-        <img loading="lazy" src="/img/ergonomik-kalem.jpg" alt=""><br><br>
-        <img loading="lazy" src="/img/ergonomik-canta-askisi.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/tasarim-sozlugu-ergonomi-nedir.jpg" alt=""><br><br>
+        <img loading="lazy" class="slb" src="/img/ergonomik-kalem.jpg" alt=""><br><br>
+        <img loading="lazy" class="slb" src="/img/ergonomik-canta-askisi.jpg" alt="">
     </div>
     <div class="col-md-4">
-        <img loading="lazy" src="/img/ergonomik-tutus.jpg" alt=""><br><br>
-        <img loading="lazy" src="/img/ergonomik-mouse.jpg" alt=""><br><br>
-        <img loading="lazy" src="/img/ergonomik-klavye.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/ergonomik-tutus.jpg" alt=""><br><br>
+        <img loading="lazy" class="slb" src="/img/ergonomik-mouse.jpg" alt=""><br><br>
+        <img loading="lazy" class="slb" src="/img/ergonomik-klavye.jpg" alt="">
     </div>
-    <div class="col-md-4"><img loading="lazy" src="/img/ergonomik-sandalye.jpg" alt=""><br><br>
-        <img loading="lazy" src="/img/ergonomik-oturma-elemani.jpg" alt=""></div>
+    <div class="col-md-4"><img loading="lazy" class="slb" src="/img/ergonomik-sandalye.jpg" alt=""><br><br>
+        <img loading="lazy" class="slb" src="/img/ergonomik-oturma-elemani.jpg" alt=""></div>
 </div>
 
 <br><br><br>
