--- a/content/dergi/sayi-4/sayi-4-muzik-aletleri.html
+++ b/content/dergi/sayi-4/sayi-4-muzik-aletleri.html
@@ -17,19 +17,19 @@ tags= [
 ]
 +++
 <div class="text-center">
-<img loading="lazy" src="/img/the-beatles-walk.jpg" alt="">
+<img loading="lazy" class="slb" src="/img/the-beatles-walk.jpg" alt="">
 </div>
 <div class="container">
     <p>Müzik bir sahne sanatıdır ve temel formatı canlı sergilenmesidir. Fakat teknolojinin gelişmesiyle müzik sıkıştırılabilir, kopyalanabilir bir hale gelmeye başladı. İlk basılan taş plaklar beraberinde yeni bir sektörü de canlandırmaya başladı; müzik sektörü. Müziğin kopyalanıp satışa sunulmasıyla gittikçe artan kayıt şirketleri yeni sesler ve isimler aramaya ve onları pazarlamaya başladı. Müziğin çok mühim bir sektöre dönüşmesinde kuşkusuz kayıt şirketleri yani plak şirketlerinin önemi büyüktür. Çünkü müzik hem canlı kayıtlardan uzaklaşıyor hem kendi içinde sonsuz şekilde gelişip farklı sesler üretilmeye başlanıyordu.</p>
 
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/andre-moura-2563017.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/andre-moura-2563017.jpg" alt=""></div>
     <div class="col-md-6"><p>Kasetlerin üretilmesi belki de müzik sektörünün en büyük sektörlerden biri olduğunun ilk kanıtıdır. Manyetik banda kaydedilen bu format hem taşınması hem de üretilmesi kolay bir icat oldu ve hayatımıza Walkman dediğimiz kasetçalarları getirdi. Kuşkusuz dünya üzerinde birçok sanatçı günümüzde ulaşamayacağı kopya satışlarına kaset döneminde ulaştılar. Kasetler çok sevildi ve dünya üzerinde geniş yankılar uyandırdı. Kişisel bilgisayarların artması ve müzik sistemlerinin gelişmesiyle kasetler yerini yavaş yavaş CD kopyalarına bıraktı.</p>
     </div>
 </div>
 <br><br>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/laura-balbarde-4296357.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/laura-balbarde-4296357.jpg" alt=""></div>
     <div class="col-md-6"><p>CD’ler bir dönem hatırı sayılır bir satış yakaladı fakat kaset satış rekorlarını geçti mi işte orası tartışılır. Teknoloji çok hızlı gelişmeye devam etti ve Dijital Müzik dediğimiz çevrimiçi müzik dinleme organları ortaya çıktı. Tabii CD’lerin asıl katili Dijital Müzik olmadı. CD’lerin asıl katili ne yazık ki korsan müzik üretimleri oldu. Hem korsan CD hem de internetin yaygınlaşmasıyla mp3 uzantılı ses kayıtları CD’leri kötü etkiledi.</p>
         <p></p>
         <p>Artık kaset veya CD kullanmıyoruz. Neredeyse taşıdığımız her mobil cihaz, dünyanın her yerinde binlerce şarkıyı dinleyip videoyu izlememize olanak sağlıyor. Ancak hareket halindeyken en sevdiğimiz şarkıları dinleyebilmek, yakınımızdaki herkesi müziğimize maruz bırakmamak Walkman ile başladı.</p>
@@ -38,21 +38,21 @@ tags= [
 
 <h2>Sony Walkman</h2>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/walkman-sony.jpeg" alt=""><br><br></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/walkman-sony.jpeg" alt=""><br><br></div>
     <div class="col-md-6"><p><strong>Gramofon, plakçalar, kasetçalar hatta CD çalar teknolojilerinin hiçbirinde müzik dinlemek walkman kadar kişisel ve özgür olmadı. Piyasaya sürüldüğü günden beri insanların müzik dinleme alışkanlığını tümden değiştiren Walkman, aslında değişimin başlangıcı oldu.</strong></p>
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/ikonik-muzik-cihazlari-sony-walkman.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/ikonik-muzik-cihazlari-sony-walkman.jpg" alt=""></div>
     <div class="col-md-6"><p>Japon elektronik devi Sony’nin 1979’da Japonya’da piyasaya sürdüğü taşınabilir kasetçalar olan Walkman’in ilk sürümünde; FM radyo, ileri geri tuşları, oynatma tuşu, pil yuvaları ve iki kişinin aynı anda müzik dinleyebilmesi için iki adet kulaklık girişi bulunuyordu. Mavi-gri renklere sahip ilk modelin en büyük problemi kaset kapağının sürekli açılmasıydı. Bu sebeple Walkman II’de kaset kapağının açılmasını engelleyen bir kapak tutucu bulunuyordu. </p></div>
 </div>
 <br><br>
 <div class="text-center">
-<img loading="lazy" src="/img/sony-walkman-magazine-poster.jpg" alt="">
+<img loading="lazy" class="slb" src="/img/sony-walkman-magazine-poster.jpg" alt="">
 </div>
 <br><br>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/sony-walkman-poster.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/sony-walkman-poster.jpg" alt=""></div>
     <div class="col-md-6"><p>Ayrıca yine o günlerde hayatımıza giren, uçları süngerlerle kaplı, kafaya taç gibi takılan kulaklıklar da Walkman ile birlikte satılıyordu. Bir söylentiye göre Walkman, Sony’nin kurucu ortağı olan Akio Morita’nın uçak yolculuklarında çevreye rahatsızlık vermeden müzik dinlemek istemesi üzerine, Sony mühendislerinden Nobutoshi Kihara tarafından geliştirilmişti.</p>
         <p></p>
         <p>Gelişen teknolojiyle birlikte kasetler yerini önce CD’lere daha sonra da dijital müziklere ve müzik çalarlara bıraksa da Walkman’in yarattığı ikonik etki her zaman akıllarda kalacak gibi görünüyor.</p>
@@ -63,9 +63,9 @@ tags= [
 </div>
 <br><br>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/sony-walkman-rock-poster.jpg" alt="">
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/sony-walkman-rock-poster.jpg" alt="">
     </div>
-    <div class="col-md-6"><img loading="lazy" src="/img/ikonik-muzik-cihazlari-sony-walkman-poster.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/ikonik-muzik-cihazlari-sony-walkman-poster.jpg" alt=""></div>
 </div>
 <h2 class="text-center"><em><strong>Şimdi reklamlar...</strong></em> </h2>
 <div class="text-center">
@@ -89,7 +89,7 @@ tags= [
     allowfullscreen
   ></iframe></div>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/sound-burger-audio-technica.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/sound-burger-audio-technica.jpg" alt=""></div>
     <div class="col-md-6"><br><br><p>1980'lerin başında Walkman çılgınlığının doruğunda iken, Japonya merkezli bir elektronik şirketi olan Audio Technica, taşınabilir bir pikap olan AT-727 Sound Burger'i piyasaya sürdü. Ayrıca Mister Disc adıyla da pazarlandı.</p>
         <p></p>
         <p><em>"Bir erkek ayakkabısından daha büyük değil"</em> sloganıyla ortaya çıktı. Pille çalışıyordu ve bir çift katlanabilir kulaklıkla birlikte satılıyordu. Hem 33 hem de 45 RPM* kayıtlarını çalabiliyordu.</p>
@@ -104,21 +104,21 @@ tags= [
     <div class="col-md-6"><p>Walkman’de olduğu gibi Sound Burger de kullanıcıların her yerde plakları çalmasına izin verir. Tabi Walkman’de ki gibi bir rahatlıkla değil, çünkü düz bir yüzeye ihtiyacı vardı.</p>
         <p>Bugünlerde Sound Burger, neredeyse efsanevi ses kalitesiyle ses cihazları meraklıları tarafından aranan bir üründür. Dolayısıyla pratik olmamasına rağmen, <em>bu hem az pişmiş hem de iyi pişmiş bir Burger:)</em></p>
         </div>
-    <div class="col-md-6"><img loading="lazy" src="/img/sound-burger.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/sound-burger.jpg" alt=""></div>
 </div>
 
 
 <h2>Sony Discman</h2>
 <div class="row">
-    <div class="col-md-7"><img loading="lazy" src="/img/sony-discman.jpg" alt=""></div>
-    <div class="col-md-5"><img loading="lazy" src="/img/sony-discman-2.jpg" alt=""></div>
+    <div class="col-md-7"><img loading="lazy" class="slb" src="/img/sony-discman.jpg" alt=""></div>
+    <div class="col-md-5"><img loading="lazy" class="slb" src="/img/sony-discman-2.jpg" alt=""></div>
 </div>
 <div class="row">
     <div class="col-md-6"><p><strong>Discman, </strong>Sony'nin taşınabilir  CD (Compact Disc) oynatıcılar markasıydı. İlk Discman, D-50, 1984'te piyasaya sürüldü. 1997'de adı dünya çapında <strong>CD Walkman</strong> olarak anılmaya başlandı.</p>
         <p>Taşınabilir yapısı ve Walkman'e benzerliği nedeniyle, D-50'ye ' <strong>Discman'</strong> takma adı verildi. Bu ad, herhangi bir Sony taşınabilir CD çalara atıfta bulunmak için kullanıldı. Ancak Sony, 1990'ların sonlarından itibaren adını CD Walkman olarak değiştirdi.</p>
         <p>CD'nin geliştirilmesinden önce, kaset bantları, o zamanlar yeni gelişen portatif ses endüstrisine göre baskın bir ses depolama biçimiydi. 1979'da Sony, Walkman'i Japonya'da tanıttı. Sony, CD'nin potansiyelini fark etmeye başladığında, yöneticiler CD çalar pazarına ivme kazandırmak için bir araç arayışına girdiler ve onu ses meraklılarından ana akıma taşımaya çalıştılar.</p>
         <p>Bir mücevher kutusu kadar yer kaplayan bu cihaz ilk component CD çalardır. D-50'nin piyasaya sürülmesi, bir ses formatı olarak CD'lere ve genel olarak ses endüstrisine halkın ilgisini uyandırdı. Taşınabilir bir CD pazarı yaratıldı ve bu endüstri, mevcut CD başlıklarının sayısının önemli ölçüde artmasıyla ani bir büyüme yaşadı.</p></div>
-    <div class="col-md-6"><img loading="lazy" src="/img/sony-discman-music.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/sony-discman-music.jpg" alt=""></div>
 </div>
 
 <h2>MP3 Çalar</h2>
@@ -131,27 +131,27 @@ tags= [
         <p>1997 yılında, dünyanın ilk MP3 çaları MPMan F10, Güney Koreli bir SaeHan Information Systems şirketi tarafından geliştirildi. Avrupa’da satış yapılan kutuların üzerinde <em>"Cebinizdeki Dünyanın İlk MP3 Çaları"</em> sözcükleriyle sıkıca süslenmişti. O kadar ince olmamasına rağmen!</p>
     </div>
     <div class="col-md-6">
-        <img loading="lazy" src="/img/mp-man.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/mp-man.jpg" alt="">
        
 </div>
 </div>
 <h2>Apple iPod</h2>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/ipod-say-hello.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/ipod-say-hello.jpg" alt=""></div>
     <div class="col-md-6"><p>Orijinal iPod ilk çıktığında, MP3 çalarlara hakim olan kitle için yeni görünmüyordu. Apple'ın müzik mağazasıyla birleşiminin yanı sıra yeni olan şey fiziksel tasarımdı. Minimalist düzen, çalma listelerinin bulunduğu ekran, kolay erişim düğmeleri ve kaydırma tekerleği. Bunların hepsi bir Apple tasarımını oluşturan unsurlardı.</p>
         <p></p></div>
 </div>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/ipod-1958-2001.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/ipod-1958-2001.jpg" alt=""></div>
     <div class="col-md-6"><p>Steve Jobs tarafından sipariş edildiği üzere, Apple'ın donanım mühendisliği şefi Jon Rubinstein iPod hattını tasarlamak için donanım mühendisleri Tony Fadell, Michael Dhuey ve tasarım mühendisi Jonathan Ive dahil olmak üzere bir mühendis ekibi oluşturdu.  Rubinstein, Toshiba sabit disk sürücüsünü Japonya'da bir Apple tedarikçisiyle görüşürken keşfetmiş ve Apple için onun haklarını satın almıştı. Estetik bakımdan, <em>Dieter Rams tarafından tasarlanan 1958 Braun T3 transistörlü radyo</em>dan ilham alan ürün, "yirmi birinci yüzyılın Walkman'i" bir yıldan kısa bir süre içinde geliştirildi ve 23 Ekim 2001'de tanıtıldı. Jobs, "<em>cebinize 1.000 şarkı" </em>koyan 5 GB sabit diske sahip Mac uyumlu bir ürün olduğunu duyurdu.</p>
         <p>İPod ilk piyasaya çıktığında, dünya nasıl tepki vereceğini bile bilmiyordu.  Geekler "Bir göçebeden daha az yer!" Diye bağırıyorlardı. Diğerleri "ama benim zaten bir MP3 çalarım var" diye düşünüyordu.</p></div>
 </div>
-<img loading="lazy" src="/img/ipod-ads.jpg" alt="">
+<img loading="lazy" class="slb" src="/img/ipod-ads.jpg" alt="">
 <br><br><br>
 <div class="row">
-    <div class="col-md-4"><img loading="lazy" src="/img/steve-jobs-ipod.jpg" alt=""></div>
+    <div class="col-md-4"><img loading="lazy" class="slb" src="/img/steve-jobs-ipod.jpg" alt=""></div>
     <div class="col-md-4"><p>Aslında Apple, MP3 oynatıcı pazarına giren ilk firma değildi, ancak iPod'un tasarımı ve işlevselliği görünüşe göre geniş bir kesime hitap ederek onu piyasadaki en başarılı MP3 çalar haline getirdi. İTunes Music Store 2003'te kullanıma sunulduğunda, iPod kullanmanın daha da fazla avantajı vardı - iTunes Store'un kendisi İnternet'teki bu tür mağazaların ilklerinden biriydi ve iPod, bunu yapabilen (bilgisayarın dışında) tek cihazdı.</p></div>
-    <div class="col-md-4"><img loading="lazy" src="/img/the-beatles-ipod-poster.jpg" alt="">
+    <div class="col-md-4"><img loading="lazy" class="slb" src="/img/the-beatles-ipod-poster.jpg" alt="">
     </div>
 </div>
 
@@ -169,16 +169,16 @@ tags= [
 
 <h2><strong>iPod Shuffle</strong></h2>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/ipod-design.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/ipod-design.jpg" alt=""></div>
     <div class="col-md-6"><p>iPod shuffle, 2005 yılının başlarında piyasaya sürüldü. O zamanlar amaç, yalnızca minimum işlevselliği isteyen ve hangi şarkının çaldığını görmeyi umursamayanlara daha da ucuz ve minimalist bir müzik çalar sunmaktı. İlk iPod shuffle'larda yerleşik bir çalma listesi işlevi yoktu, kullanıcıların MP3'lerini ve iTunes'dan satın aldığı müzikleri sadece <strong>karıştırma özelliğiyle</strong> dinleyebiliyorlardı.</p>
         <p>Ciddi şekilde azaltılmış teknik özelliklerine rağmen, iPod Shuffle küçük bir kullanıcı grubunun ilgisini çekti; toplu taşıma kullananların ve koşucuların.</p></div>
 </div>
 <br><br>
-<div class="text-center"><img loading="lazy" src="/img/color-ipod-shuffle.jpg" alt=""></div>
+<div class="text-center"><img loading="lazy" class="slb" src="/img/color-ipod-shuffle.jpg" alt=""></div>
 
 <br><br><br><br>
 <h2>Dijital Müzik Platformları</h2>
-<img loading="lazy" src="/img/dijital-muzik-platformlari.jpg" alt="">
+<img loading="lazy" class="slb" src="/img/dijital-muzik-platformlari.jpg" alt="">
 <p>Artık kasetlere, CD'lere ihtiyaç duymuyoruz çok eski şarkılara ya da daha dün çıkanlara ulaşmak için artık müzik marketlerin yolunu da tutmuyoruz. Neredeyse taşıdığımız her mobil cihazlarda bulunan dijital müzik platformlarının adreslerine tıklıyoruz. </p>
 <p>Genellikle aylık abonelik sistemiyle çalışan bu platformlar, milyonlarca kullanıcıya sahipler. Bu platformlar dilediğin gibi çalma listeleri hazırlayabileceğin ya da moduna özel hazırlanmış listeleri dinleyebileceğin, radyo kanallarına ulaşabileceğin hatta sanatçıların turne programlarına kadar öğrenebileceğin birçok geniş hizmet sunuyor.</p>
 
@@ -189,7 +189,7 @@ tags= [
         <iframe src="https://open.spotify.com/embed?uri=spotify%3Aplaylist%3A0cetO8Wv2OKtWJz2omJJ8X" width="100%" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         <p><a href="https://open.spotify.com/playlist/0cetO8Wv2OKtWJz2omJJ8X" target="_blank">Spotify Markut Müzik listesi</a></p>
     </div>
-    <div class="col-md-6"><img loading="lazy" src="/img/o-zaman-dans-uykusuz.jpg" alt=""></div>
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/o-zaman-dans-uykusuz.jpg" alt=""></div>
 </div>
 <br><br>
 <button
