--- a/content/dergi/sayi-4/sayi-4-streamline-raymond.html
+++ b/content/dergi/sayi-4/sayi-4-streamline-raymond.html
@@ -17,7 +17,7 @@ tags= [
 ]
 +++
 <div class="text-center">
-<img loading="lazy" style="max-height:700px;" src="/img/streamline-akimi-raymond-loewy.jpg" alt="" ></div>
+<img loading="lazy" class="slb" style="max-height:700px;" src="/img/streamline-akimi-raymond-loewy.jpg" alt="" ></div>
 <div class="container">
 
     <p>Streamline'ı; terim anlamı olarak ''akış çizgisi, akışkan çizgiler'' tamlamaları kullanılan, ana temasının <em><strong>hız</strong></em>, ana çizgisinin bir <em><strong>damla</strong></em> formunun oluşturduğu, etrafımızda örneklerine sık sık rastladığımız bir akım olarak tanımlayabiliriz.</p>
@@ -26,11 +26,11 @@ tags= [
 
 <div class="row">
     <div class="col-md-4">
-    <img loading="lazy" src="/img/streamline-aerondinami.jpg" alt="">
-    <img loading="lazy" src="/img/aerodinamik-ozellik.jpg" alt="">
+    <img loading="lazy" class="slb" src="/img/streamline-aerondinami.jpg" alt="">
+    <img loading="lazy" class="slb" src="/img/aerodinamik-ozellik.jpg" alt="">
     </div>
     <div class="col-md-4">
-        <img loading="lazy" src="/img/streamline-aerodinamik.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/streamline-aerodinamik.jpg" alt="">
     </div>
     <div class="col-md-4"><p><strong><em>Peki ya Streamline dediğimizde aklımızda neler canlanıyor? </em></strong></p>
         <ul>
@@ -47,8 +47,8 @@ tags= [
 <p>1. sayımızda da kendisinden bahsettiğimiz Raymond Loewy'i <a href="https://www.markut.net/sayi-1/raymond-loewy/" target="_blank">buradan inceleyebilirsiniz</a>, Amerikan rüyasının tüketici odaklı vizyonuna yön veren, tasarımda superstarlık seviyesinde bir üne sahip olan <strong>Raymond Loewy</strong> için Streamline akımının öncüsüdür desek yanlış olmaz. Çocukluğundan beri hıza tutkun olan, defterlerini tren, gemi ve araba karamalarıyla dolduran Loewy'nin hemen her tasarımında streamline etkisi görebiliriz. Streamline ile kabuk tasarımında görüntünün toplumda eskisinden daha fazla değer gördüğünü fark eden Loewy, estetik değer ve faydalarını birçok üründe öne çıkarmaya başladı. Bunlar arasından en çarpıcı olanları; Coldspot Buzdolabı, GG-1 ve S-1 lokomotifleri, elektrikli kalem açacağı, Studeaker Avanti, Scenicruiser bus...</p>
 <br><br>
 <div class="row">
-    <div class="col-md-4"> <img loading="lazy" src="/img/streamline-coldspot.jpg" alt=""></div>
-    <div class="col-md-4"> <img loading="lazy" src="/img/cold-spot-refrigerator.jpg" alt=""></div>
+    <div class="col-md-4"> <img loading="lazy" class="slb" src="/img/streamline-coldspot.jpg" alt=""></div>
+    <div class="col-md-4"> <img loading="lazy" class="slb" src="/img/cold-spot-refrigerator.jpg" alt=""></div>
     <div class="col-md-4"><p>Raymond Loewy'nin tasarladığı <em><strong>Coldspot buzdolapları</strong></em>, alüminyum endüstrisini de canlandıran paslanmaz rafları ve ''tüy hafifliğindeki'' kulpu ile kendi alanında çığır açmıştı.  Öyle ki arkasındaki reklam kampanyasıyla da birlikte satışlarını 5 yılda 15.000'den 275.000'e çıkarmıştı. Hantal olan eski modeli ahşap malzemeyle imal edilen eski buzdolaplarının metal bir kopyasıydı. Loewy'nin tasarladığı yeni Coldspot'da köşeler yuvarlatılmış, ısrarla dikeylik üzerinde durulmuş ve ortadan geçen çizgiler ile bütünlüğe erişilmişti. </p>
     </div>
 </div>
@@ -57,13 +57,13 @@ tags= [
     <div class="col-md-4"><p>Loewy, otomotiv üretim hatlarından esinlenerek, perçin yerine kaynak kullanmayı düşünmüş, ve böylece daha düzgün ve pürüzsüz bir kabuk elde etmişti. Özellikle bir buharlı lokomotif için yaptığı kabuk tasarımı çok başarılı oldu. Dönemin en büyük buharlı lokomotifi olan <em><strong>S-1</strong></em>'in mermi şeklindeki kabuk tasarımı ile rüzgarın sürtünme etkisini neredeyse <span style="text-decoration: underline;">üçte birine</span> indiriyordu. Lokomotif, hem buharlı olma niteliğini kaybetmeyip hem de bütünlük olarak o zamana değin elde edilebilmiş en başarılı streamline ifadesini 'mermi burnu' sayesinde yakalayabilmişti.</p>
     </div>
     <div class="col-md-4">
-        <img loading="lazy" src="/img/raymond-loewy-train-crowbar-studios.jpg" alt=""></div>
-    <div class="col-md-4"> <img loading="lazy" src="/img/raymond-loewy-s1-locomotive.jpg" alt=""></div>
+        <img loading="lazy" class="slb" src="/img/raymond-loewy-train-crowbar-studios.jpg" alt=""></div>
+    <div class="col-md-4"> <img loading="lazy" class="slb" src="/img/raymond-loewy-s1-locomotive.jpg" alt=""></div>
 </div>
 <br><br>
 <div class="row">
-    <div class="col-md-4"> <img loading="lazy" src="/img/pencilsharpener.jpg" alt=""></div>
-    <div class="col-md-4"> <img loading="lazy" src="/img/streamline-kalem-acacagi.gif" alt=""></div>
+    <div class="col-md-4"> <img loading="lazy" class="slb" src="/img/pencilsharpener.jpg" alt=""></div>
+    <div class="col-md-4"> <img loading="lazy" class="slb" src="/img/streamline-kalem-acacagi.gif" alt=""></div>
     <div class="col-md-4"><p>Loewy'nin 1934 yılında tasarladığı bu <em><strong>elektrikli kalem açacağı</strong></em> tam anlamıyla bir streamline akımının tasarımıdır.  Fakat bu ürün hiç üretilmemiştir. Kalemtıraşın açacak kısmı streamline akımının ana çizgisini oluşturan damla formundadır. Aynı zamanda elektrikle çalışan bu kalemtıraşın dışı parlak, pürüzsüz yüzeyli bir kabuktan oluşuyordu. Streamline aleyhindeki eleştirilere karşı ise Loewy, kalemtraşın parlak yüzeylerinin birkaç saniye içinde silinebilmesiyle kendisini savunuyordu.</p>
        </div>
 </div>
@@ -74,23 +74,23 @@ tags= [
     </div>
     <div class="col-md-4">
     
-        <img loading="lazy" src="/img/avanti-1962.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/avanti-1962.jpg" alt="">
     </div>
     <div class="col-md-4">
-        <img loading="lazy" src="/img/raymond-loewy-avanti-ad-2.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/raymond-loewy-avanti-ad-2.jpg" alt="">
     </div>
 </div>
 
 <div class="row">
-    <div class="col-md-4"> <img loading="lazy" src="/img/raymond-loewy-avanti-sketch-5.jpg" alt="">
+    <div class="col-md-4"> <img loading="lazy" class="slb" src="/img/raymond-loewy-avanti-sketch-5.jpg" alt="">
         <br><br>
-        <img loading="lazy" src="/img/raymond-loewy-avanti-sketch-8.jpg" alt=""></div>
-    <div class="col-md-4"> <img loading="lazy" src="/img/raymond-loewy-avanti-sketch-4.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/raymond-loewy-avanti-sketch-8.jpg" alt=""></div>
+    <div class="col-md-4"> <img loading="lazy" class="slb" src="/img/raymond-loewy-avanti-sketch-4.jpg" alt="">
         <br><br>
-        <img loading="lazy" src="/img/raymond-loewy-avanti-sketch-2.jpg" alt=""></div>
-    <div class="col-md-4"> <img loading="lazy" src="/img/raymond-loewy-avanti-sketch-1.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/raymond-loewy-avanti-sketch-2.jpg" alt=""></div>
+    <div class="col-md-4"> <img loading="lazy" class="slb" src="/img/raymond-loewy-avanti-sketch-1.jpg" alt="">
         <br><br>
-        <img loading="lazy" src="/img/raymond-loewy-avanti-sketch-3.jpg" alt=""></div>
+        <img loading="lazy" class="slb" src="/img/raymond-loewy-avanti-sketch-3.jpg" alt=""></div>
 </div>
 <p class="text-center"><em>Raymond Loewy'nin eskizleri</em></p>
 
@@ -99,12 +99,12 @@ tags= [
     <div class="col-md-4"><p>Raymond Loewy 1954 yılında General Motors için <em><strong>Scenicruiser</strong></em> tasarladı. Bu otobüs bir süre sonra Amerika yollarının bir simgesi haline geldi. Scenicruiser için ilk tasarım prototipi olan GX-1, alt güverteden erişimi olan ve sürücünün üst güvertede oturduğu bir çift katlı araçtı . Kısa süre sonra, GX-1 birçok Greyhound garajı için çok uzun olduğu ve 50 kişilik bagaj alanı olmadığı için iki seviyeli bir tasarımın daha iyi olacağına karar verildi. GX-2 modeli ile alt katında sürücü alanı+10 koltuk+lavabo, üst katında 33 koltuğa sahip yeni bir model geliştirildi.</p>
     </div>
     <div class="col-md-4">
-        <img loading="lazy" src="/img/raymond-loewy-bus-gx-1.jpg" alt="">
-        <img loading="lazy" src="/img/raymond-loewy-gx-1.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/raymond-loewy-bus-gx-1.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/raymond-loewy-gx-1.jpg" alt="">
     </div>
     <div class="col-md-4">
-        <img loading="lazy" src="/img/raymond-loewy-gx2-bus.jpg" alt="">
-        <img loading="lazy" src="/img/raymond-loewy-bus-sketch-crowbar-studios.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/raymond-loewy-gx2-bus.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/raymond-loewy-bus-sketch-crowbar-studios.jpg" alt="">
     </div>
 </div>
 
@@ -113,35 +113,35 @@ tags= [
 <div class="row">
     <div class="col-md-4">
         <figure class="figure">
-            <img loading="lazy" class="figure-img img-fluid" src="/img/Seche-cheveux-streamline-hair-dryer.jpg" alt="">
+            <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/Seche-cheveux-streamline-hair-dryer.jpg" alt="">
             <figcaption class="figure-caption">Aerodinamik formda saç kurutma makineleri 30'lu yıllarda çoğalmış olup günümüzdeki modellerde de bu akışkanlığı görmemize öncü olmuştur.</figcaption>
         </figure>
         <figure class="figure">
-            <img loading="lazy" class="figure-img img-fluid" src="/img/Ross-Lovegrove-GoChair.jpg" alt="">
+            <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/Ross-Lovegrove-GoChair.jpg" alt="">
             <figcaption class="figure-caption"><strong><em>Esquire</em></strong><em> dergisine göre "Koltuğunun yarış arabası gibi görünmesini isteyenler'' için tasarlanan bu koltuk, enjeksiyonla kalıplanmış magnezyumdan yapılan ilk koltuktur.</em></figcaption>
         </figure>
     </div>
     <div class="col-md-4">
         <figure class="figure">
-            <img loading="lazy" class="figure-img img-fluid" src="/img/Kem-Weber-Fauteuil-Bas.jpg" alt="">
+            <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/Kem-Weber-Fauteuil-Bas.jpg" alt="">
             <figcaption class="figure-caption"><em>1934 yılında tasarlanmış bu alçak koltukta  damla formunda kolçaklar dikkat çekmektedir.</em></figcaption>
         </figure>
         <figure class="figure">
-            <img loading="lazy" class="figure-img img-fluid" src="/img/streamline-ayakkabi.jpg" alt="">
+            <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/streamline-ayakkabi.jpg" alt="">
             <figcaption class="figure-caption"><em>Scott Patt tarafından 1971 yılında tasarlanan Air Max Contact spor ayakkabı.</em></figcaption>
         </figure>
         <figure class="figure">
-            <img loading="lazy" class="figure-img img-fluid" src="/img/streamline-van-doren-rideout-scooter.jpg" alt="">
+            <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/streamline-van-doren-rideout-scooter.jpg" alt="">
             <figcaption class="figure-caption"><em>1931 ile 1935 arasında Van Doren ve Rideout, Midwest'in en büyük tasarım ajanslarından birini yönetti. Bu tarzda tasarlanmış ilk çocuk oyuncaklarından birini ona borçluyuz.</em></figcaption>
         </figure>
     </div>
     <div class="col-md-4">
         <figure class="figure">
-            <img loading="lazy" class="figure-img img-fluid" src="/img/streamline-masa-lambasi.jpg" alt="">
+            <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/streamline-masa-lambasi.jpg" alt="">
             <figcaption class="figure-caption"><em>Faro (italyanca 'deniz feneri' anlamında) adında roketatara benzetilen bir masa lambası. Lasa Ghini'nin hayalgücünün tipik bir örneğidir.</em></figcaption>
         </figure>
         <figure class="figure">
-            <img loading="lazy" class="figure-img img-fluid" src="/img/Batteur-Electrique-Mixal.jpg" alt="">
+            <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/Batteur-Electrique-Mixal.jpg" alt="">
             <figcaption class="figure-caption"><em>1935-1940'ta tasarlanmış Mixall Jr. elektrikli karıştırıcı model 12-P.</em></figcaption>
         </figure>
     </div>
