--- a/content/dergi/sayi-1/sayi-1-rayların-üzerinde-raymond-loewy.html
+++ b/content/dergi/sayi-1/sayi-1-rayların-üzerinde-raymond-loewy.html
@@ -23,7 +23,7 @@ type: sayfa
 ---
 
 <div class="text-center">
-	<img loading="lazy" class="img-fluid" src="/img/raymond-loewy-raylarin-uzerinde.jpg" alt="Rayların Üzerinde Raymond Loewy" />
+	<img loading="lazy" class="slb" class="img-fluid" src="/img/raymond-loewy-raylarin-uzerinde.jpg" alt="Rayların Üzerinde Raymond Loewy" />
 </div>
 <div class="container">
 	<div class="row">
@@ -53,7 +53,7 @@ type: sayfa
 			</p>
 		</div>
 		<div class="col-md-6 mt-5">
-			<img loading="lazy" class="img-fluid" src="/img/raymond-loewy-collage.jpg" alt="Raymond Loewy Kolaj" />
+			<img loading="lazy" class="slb" class="img-fluid" src="/img/raymond-loewy-collage.jpg" alt="Raymond Loewy Kolaj" />
 		</div>
 		<div class="col-md-6">
 			<p>
@@ -77,7 +77,7 @@ type: sayfa
 			</p>
 		</div>
 		<div class="col-md-8">
-			<img loading="lazy"
+			<img loading="lazy" class="slb"
 				class="img-fluid"
 				src="/img/raymond-loewy-lokomotif-1935.jpg"
 				alt="Raymond Loewy Lokomotif İç Tasarımı 16 Ocak 1935"
@@ -98,7 +98,7 @@ type: sayfa
 			</p>
 		</div>
 		<div class="col-md-8">
-			<img loading="lazy"
+			<img loading="lazy" class="slb"
 				class="img-fluid"
 				src="/img/raymond-loewy-lokomotif-1936.jpg"
 				alt="Raymond Loewy Lokomotif İç Tasarımı 26 Mayıs 1936"
@@ -117,11 +117,11 @@ type: sayfa
 		</div>
 		<div class="col-md-8">
 			<br />
-			<img loading="lazy" class="img-fluid" src="/img/raymond-loewy-lokomotif.jpg" alt="Raymond Loewy Lokomotif Illustrasyonu" />
+			<img loading="lazy" class="slb" class="img-fluid" src="/img/raymond-loewy-lokomotif.jpg" alt="Raymond Loewy Lokomotif Illustrasyonu" />
 		</div>
 		<div class="col-md-12">
 			<br />
-			<img loading="lazy"
+			<img loading="lazy" class="slb"
 				class="img-fluid"
 				src="/img/PRR-S1-Loewy.jpg"
 				alt="Raymond Loewy'nin PRR için yaptığı S1 Lokomotif tasarımı"
