--- a/content/dergi/sayi-2/sayi-2-iskandinav-tasarimina-bakis.html
+++ b/content/dergi/sayi-2/sayi-2-iskandinav-tasarimina-bakis.html
@@ -57,7 +57,7 @@ tags= [
     </div>
     <div class="col-md-5">
       <figure class="figure mt-4">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/iskandinav-tasarimi-peacock-chair.jpg"
           alt="İskandinav Tasarımı, Peacock Chair, Hans Wegner"
@@ -88,7 +88,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-4">
-      <img loading="lazy"
+      <img loading="lazy" class="slb"
         src="/img/lagom.jpg"
         alt="Lagom; not too little, not too much, just right"
       />
@@ -136,7 +136,7 @@ tags= [
     </div>
     <div class="col-md-7">
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/iskandinav-tasarimi-savoy-vase-aalto.jpg"
           alt="İskandinav Tasarımı, Savoy Vase, Alvar Aalto"
@@ -149,7 +149,7 @@ tags= [
     <div class="col-md-4">
       <h3>Alvar Aalto</h3>
       <figure class="figure mt-3">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/alvar-aalto.jpg"
           alt="Alvar Aalto"
@@ -177,7 +177,7 @@ tags= [
         edebileceğini kanıtlar nitelikte.
       </p>
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/paimio-chairs.jpg"
           alt="Paimio Chairs, 1930, Paimio Sanatorium"
@@ -189,7 +189,7 @@ tags= [
     </div>
     <div class="col-md-4 mt-6">
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/savoy-vase-alvar-aalto.jpg"
           alt="Savoy Vase, Alvar Aalto"
@@ -200,7 +200,7 @@ tags= [
   </div>
   <div class="row mt-6">
     <div class="col-md-7">
-      <img loading="lazy"
+      <img loading="lazy" class="slb"
         src="/img/brooklyn-muzesi-1954.jpg"
         alt="Brooklyn Müzesi 1954 İskandinav Tasarım Sergisi"
       />
@@ -235,7 +235,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-6 mt-4">
-      <img loading="lazy" src="/img/Aalto_landscape.jpg" alt="Alvar Aalto Tasarımları" />
+      <img loading="lazy" class="slb" src="/img/Aalto_landscape.jpg" alt="Alvar Aalto Tasarımları" />
     </div>
     <div class="col-md-3">
       <p>
@@ -254,7 +254,7 @@ tags= [
   <div class="row">
     <div class="col-md-5">
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/arne-jacobsen.jpg"
           alt="Arne Jacobsen"
@@ -268,7 +268,7 @@ tags= [
         bilinir.
       </p>
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/swan-egg-chair-arne-jacobsen.jpg"
           alt="Swan and Egg Chair, Arne Jacobsen"
@@ -292,7 +292,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-4">
-      <img loading="lazy"
+      <img loading="lazy" class="slb"
         src="/img/arne-jacobsen-in-studio.jpg"
         alt="Arne Jacbosen Stüdyo'da"
       />
@@ -307,7 +307,7 @@ tags= [
         ederiz. Temel faktör oranlar.” ifadelerini kullandığı bilinir.
       </p>
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/drop-ant-chair-jacobsen.jpg"
           alt="Drop and Ant Chair, Arne Jacobsen"
@@ -331,7 +331,7 @@ tags= [
     </div>
     <div class="col-md-3">
       <figure class="figure">
-        <img loading="lazy"
+        <img loading="lazy" class="slb"
           class="figure-img img-fluid"
           src="/img/kv-1-vola-arne-jacobsen.jpg"
           alt="KV1, Vola, Arne Jacobsen, 1968"
@@ -341,7 +341,7 @@ tags= [
         </figcaption>
       </figure>
       <figure class="figure">
-        <img loading="lazy" class="figure-img img-fluid" src="/img/fritz-hansen-egg-chair.jpg"
+        <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/fritz-hansen-egg-chair.jpg"
         alt="Fritz Hansen, "Egg Chair" üretimi, Hans Mannerhagen, 2015">
         <figcaption class="figure-caption">
           Fritz Hansen, "Egg Chair" üretimi, Hans Mannerhagen, 2015
@@ -351,7 +351,7 @@ tags= [
   </div>
   <div class="row mt-6">
     <div class="col-md-3">
-      <img loading="lazy"
+      <img loading="lazy" class="slb"
         src="/img/iskandinav-tasarimi-urunleri.jpg"
         alt="İskandinav Tasarım Ürünleri"
       />
@@ -365,7 +365,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-6">
-      <img loading="lazy" src="/img/cam-dekorasyon-imalat.jpg" alt="Cam imalat" />
+      <img loading="lazy" class="slb" src="/img/cam-dekorasyon-imalat.jpg" alt="Cam imalat" />
       <p>
         Bölgeye sanayileşme geç geldiği için, geleneksel zanaat becerileri canlı
         kaldı. Böylece İskandinav moderni, makine üretiminin; zanaattan gelen
@@ -376,7 +376,7 @@ tags= [
       </p>
     </div>
     <div class="col-md-3">
-      <img loading="lazy"
+      <img loading="lazy" class="slb"
         src="/img/armchair-paimio-chair-by-alvar-aalto-seating-mr-chair.jpg"
         alt=""
       />
