--- a/content/dergi/sayi-4/sayi-4-olafur.html
+++ b/content/dergi/sayi-4/sayi-4-olafur.html
@@ -35,7 +35,7 @@ class="bg-mrkt"
 
 <div class="row">
     <div class="col-md-6">
-        <img loading="lazy" src="/img/beauty-tate-modern-olafur.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/beauty-tate-modern-olafur.jpg" alt="">
         <blockquote>Beauty, Tate Modern, London, 1993.</blockquote></div>
     <div class="col-md-6"><p>Duman ve ayna sanatında usta olan Eliasson için dünyayı değiştirmek, onu deneyimleme biçimimizi değiştirmektir. Hiçliği deneyimlemeyi gökkuşağının oluşumuyla gerçekleştirmeyi hedefleyen Olafur; göz açısı, damla ve ışıkla meydana gelen gökkuşağı oluşumundan yola çıkıp, ilk eserlerinden biri olan Beauty'i hayata geçirdi. Bu üç temel bileşenden örneğin göz olmazsa, göz açısı da olmaz ve gökkuşağı olmaz. Yanınızdaki kişi sizin gökkuşağınızı göremez, çünkü o göz başka bir yerdedir. Sizin oradaki varlığınıza bağlı olan bir oluşumdur der Eliasson.</p>
     </div>
@@ -49,7 +49,7 @@ class="bg-mrkt"
         <p>eskizlerin başladığı nokta. Maket aşaması ise fikre ve çizime bir anlam katıyor, mesele alanla ilgili hale geliyor. </p>
         </div>
     <div class="col-md-6">
-<img loading="lazy" src="/img/the-blind-movement-olafur.jpg" alt="">
+<img loading="lazy" class="slb" src="/img/the-blind-movement-olafur.jpg" alt="">
         <blockquote>Your Blind Movement, Martin-Gropius-Bau Berlin, 2010</blockquote>
     </div>
 </div>
@@ -58,11 +58,11 @@ class="bg-mrkt"
 <div class="row">
     <div class="col-md-6"><blockquote>"Havayı, boşluğu veya atmosferi nasıl görünür kılarım?"</blockquote>
         <p>The Weather Enstalasyonu, 2003 yılında <a href="https://en.wikipedia.org/wiki/Tate_Modern" target="_blank">Tate Modern'e</a> kuruldu. Olafur, şeker ve su karışımı ile havada ince bir sis oluşturmak için <a href="https://en.wikipedia.org/wiki/Humidifiers" target="_blank">nemlendiric</a>i ve ayrıca sarı ışık yayan yüzlerce <a href="https://en.wikipedia.org/wiki/Monochromatic" target="_blank">monokromatik</a> lambadan oluşan yarım daire şeklindeki bir disk <a href="https://en.wikipedia.org/wiki/Olafur_Eliasson#cite_note-15" target="_blank">kullandı</a>. Salonun tavanı büyük bir ayna ile kaplıydı, ziyaretçiler kendilerini güneşi simgeleyen turuncu bir ışık kütlesi karşısında siyah küçük gölgeler olarak görüyordu. Pek çok ziyaretçi bu sergiye sırt üstü yatarak, ellerini ve bacaklarını sallayarak karşılık verdi. Sanat eleştirmeni <a href="https://en.wikipedia.org/wiki/Brian_O%27Doherty" target="_blank">Brian O'Doherty</a> , bunu izleyicileri "kendilerini gökyüzüne yükselmiş olarak düşünürken narsisizmleri ile sarhoş" oldukları şeklinde nitelendirdi. O'Doherty, <a href="https://en.wikipedia.org/wiki/Frieze_magazine" target="_blank">Frieze</a> dergisine 2003 yılında konuşurken, "Devasa bir tabut gibi görünen, son derece kasvetli bir alanın ilk kez etkili şekilde sosyalleştiğini görüyorum." yorumunda bulundu.</p>
-<img loading="lazy" src="/img/the-weather-project-olafur.jpg" alt="">
+<img loading="lazy" class="slb" src="/img/the-weather-project-olafur.jpg" alt="">
 </div>
     <div class="col-md-6">        
         
-        <img loading="lazy" src="/img/olafur-eliasson-the-weather-project.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/olafur-eliasson-the-weather-project.jpg" alt="">
         <blockquote>‘The Weather’ Enstalasyonu, Turbine Hall, Tate Modern, 2003.</blockquote>
         <p>Sis ile havayı görme, aynalar ile mekanı ve güneşi olandan daha büyük gösterme gibi ilüzyonlarla oluşturulmuş Weather Project, ziyaretçilere farklı deneyimler sunuyor. Proje deneyiminin ilginç yanı, kıyamet gününden ruhani tefekküre kadar çeşitli yorumlarda bulunan ziyaretçi versiyonları aynı mekanda birlikte var olabildiler. Sarı ışığın projedeki kilit nokta olduğunu söyleyen Eliasson şöyle devam eder: "Bir alanı paylaşmak için aynı olmanız gerekmez." </p>
         </div>
@@ -70,13 +70,13 @@ class="bg-mrkt"
 <h2>İnsanların bağ kurabileceği bir dil yaratma yöntemi: doğa.</h2>
 <div class="row">
     <div class="col-md-6">
-        <img loading="lazy" src="/img/new-york-waterfalls-2008-olafur-elisson.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/new-york-waterfalls-2008-olafur-elisson.jpg" alt="">
         <blockquote>New York City Waterfalls, 2008</blockquote>
-       <img loading="lazy" src="/img/olafur-new-york-waterfalls.jpg" alt="">
+       <img loading="lazy" class="slb" src="/img/olafur-new-york-waterfalls.jpg" alt="">
         <p>Eserlerinde doğaya gönderme yapmayı seven Eliasson, zamanın akıp gitmesini ve şelalelerin akış hızıyla ne kadar büyük olduğunu orantılı olarak gözlemledi. Bu yüzden şelaleyi alıp Brooklyn Köprüsü'nün altına taşımaya karar verdi. Bu büyüklüğün yanında insan kendini küçücük hissediyordu. </p>
         </div>
     <div class="col-md-6">
-        <img loading="lazy" src="/img/versay-sarayi-waterfalls.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/versay-sarayi-waterfalls.jpg" alt="">
         <blockquote>Şelale, Versay Sarayı, 2016</blockquote>
         <p>Kolombiya Sanat Okulu Dekanı Carol Becker'a göre böylesine devasa bir eser yapacak kadar cesur sanatçı sayısı az, bu riski almak için sanatçının fikrine güveninin büyük olması gerekiyor.</p>
         </div>
@@ -85,18 +85,18 @@ class="bg-mrkt"
 <div class="row">
     <div class="col-md-6">
         <blockquote>Red Emotional Globe, İstanbul Modern, 2010</blockquote>
-        <img loading="lazy" src="/img/red-emotional-globe-istanbul-modern.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/red-emotional-globe-istanbul-modern.jpg" alt="">
         <blockquote><em>Paslanmaz çelik, ayna, renk efektli filtre camı, kablo ve ampul, 110 x 110 x 110 cm, Özel Koleksiyon</em></blockquote>
     </div>
     <div class="col-md-6">
       <figure class="figure">
-          <img loading="lazy" class="figure-img img-fluid" src="/img/red-emotional-globe-istanbul-olafur.jpg" alt="">
+          <img loading="lazy" class="slb" class="figure-img img-fluid" src="/img/red-emotional-globe-istanbul-olafur.jpg" alt="">
           <figcaption class="figure-caption">Olafur'un gökkuşağına bakan göz benim :)</figcaption>
       </figure>
     </div>
 </div>
 <blockquote>Riverbed, Louisiana Modern Sanat Müzesi, Olafur Eliasson, Humlebæk Danimarka, 2014. </blockquote>
-<img loading="lazy" src="/img/riverbed-olafur-eliasson.jpg" alt="">
+<img loading="lazy" class="slb" src="/img/riverbed-olafur-eliasson.jpg" alt="">
 <blockquote>İnsan ve doğa arasındaki sınırları tek bir genişlikte bulanıklaştıran "Riverbed" adlı enstalasyonu ile mekanda yaşama sürecini sorgulayarak ziyaretçiyi, manzarayı ve sanatı keşfetmeye yönlendirdi.</blockquote>
 
 
@@ -104,25 +104,25 @@ class="bg-mrkt"
 <h2>Tüm renkleri yok eden "Monokromatik Lamba"</h2>
 <div class="row">
     <div class="col-md-6">
-        <img loading="lazy" src="/img/monokromatik-lamba-olafur.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/monokromatik-lamba-olafur.jpg" alt="">
         <p>Renkleri yansıtan bir beyaz ışık olmamasıyla oda renksizmiş gibi görünüyor. Prizmatik renkler ancak beyaz ışıkla var oluyorlar. </p>
-        <img loading="lazy" src="/img/monokromatik-lamba-olafur-elasson.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/monokromatik-lamba-olafur-elasson.jpg" alt="">
     </div>
     <div class="col-md-6"><p>Bu kocaman sarı odaya giren ziyaretçiler, ellerine bakıp renksiz olduğunu gördüler. Rengin olmaması diğer her şeye daha çok dikkat etmeyi, daha çok görmeyi beraberinde getirdi.</p>
-        <img loading="lazy" src="/img/room-for-one-color-moderna-museet.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/room-for-one-color-moderna-museet.jpg" alt="">
         <blockquote>Room For One Color, Moderna Museet, Stockholm, 2015</blockquote></div>
 </div>
 <br><br><br><br><br><br>
 <div class="row">
-    <div class="col-md-6"><img loading="lazy" src="/img/olafur-studio.jpg" alt="">
+    <div class="col-md-6"><img loading="lazy" class="slb" src="/img/olafur-studio.jpg" alt="">
         <summary><strong>2007'de, Studio Olafur Eliasson'u kurdu. Mimar, mühendis, araştırmacı, sanat tarihçisi, müzisyen ve asistanlardan oluşan geniş kadrolu ekibi ile stüdyosunda araştırmalarına ve üretimlerine devam ediyor.</strong></summary>
-    <img loading="lazy" src="/img/olafur-elasson-studio.jpg" alt="">
+    <img loading="lazy" class="slb" src="/img/olafur-elasson-studio.jpg" alt="">
     </div>
     <div class="col-md-6">
-        <img loading="lazy" src="/img/studio-eliasson.jpg" alt="">
+        <img loading="lazy" class="slb" src="/img/studio-eliasson.jpg" alt="">
         <blockquote>Studio Olafur Eliasson</blockquote>
     
-    <img loading="lazy" src="/img/studio-olafur-eliasson.jpg" alt=""></div>
+    <img loading="lazy" class="slb" src="/img/studio-olafur-eliasson.jpg" alt=""></div>
 </div>
 
 <br><br><br>
